[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/fonts/digitalix.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/images/playoffs.png" type="Texture" id=2]
[ext_resource path="res://src/scripts/Playoffs.gd" type="Script" id=3]
[ext_resource path="res://assets/images/WorldCup.png" type="Texture" id=4]
[ext_resource path="res://assets/images/NationalCup.png" type="Texture" id=5]
[ext_resource path="res://assets/images/RegionalCup.png" type="Texture" id=6]
[ext_resource path="res://src/scripts/TextureRect.gd" type="Script" id=7]
[ext_resource path="res://src/PowerPong.tres" type="Theme" id=8]
[ext_resource path="res://src/scripts/PlayMatch.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 56
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[node name="Playoffs" type="CanvasLayer"]
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ 2160.44 ]
}

[node name="Data" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3240.0
texture = ExtResource( 2 )
stretch_mode = 5
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuarterFinals" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 136.0
margin_top = 136.0
margin_right = -3293.0
margin_bottom = -1719.0
custom_fonts/font = SubResource( 1 )
text = "QUARTER-FINALS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SemiFinals" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1472.0
margin_top = 336.0
margin_right = -2218.0
margin_bottom = -1519.0
custom_fonts/font = SubResource( 1 )
text = "SEMI-FINALS"

[node name="FinalMatch" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2808.0
margin_top = 600.0
margin_right = -837.0
margin_bottom = -1119.0
custom_fonts/font = SubResource( 1 )
text = "POWER PONG

FINAL MATCH"

[node name="PlayerQ1" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 152.0
margin_top = 312.0
margin_right = -3672.0
margin_bottom = -1551.0
custom_fonts/font = SubResource( 2 )
text = "BRAINAN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerQ2" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 152.0
margin_top = 512.0
margin_right = -3672.0
margin_bottom = -1351.0
custom_fonts/font = SubResource( 2 )
text = "BRAINAN"

[node name="PlayerQ3" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 152.0
margin_top = 712.0
margin_right = -3672.0
margin_bottom = -1151.0
custom_fonts/font = SubResource( 2 )
text = "BRAINAN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerQ4" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 152.0
margin_top = 912.0
margin_right = -3672.0
margin_bottom = -951.0
custom_fonts/font = SubResource( 2 )
text = "BRAINAN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerQ5" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 152.0
margin_top = 1112.0
margin_right = -3672.0
margin_bottom = -751.0
custom_fonts/font = SubResource( 2 )
text = "BRAINAN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerQ6" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 152.0
margin_top = 1312.0
margin_right = -3672.0
margin_bottom = -551.0
custom_fonts/font = SubResource( 2 )
text = "BRAINAN"

[node name="PlayerQ7" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 152.0
margin_top = 1512.0
margin_right = -3672.0
margin_bottom = -351.0
custom_fonts/font = SubResource( 2 )
text = "BRAINAN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerQ8" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 152.0
margin_top = 1712.0
margin_right = -3672.0
margin_bottom = -151.0
custom_fonts/font = SubResource( 2 )
text = "BRAINAN"

[node name="ScoreQ1M1" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 712.0
margin_top = 312.0
margin_right = -3536.0
margin_bottom = -1551.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ1M2" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 832.0
margin_top = 312.0
margin_right = -3416.0
margin_bottom = -1551.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ1M3" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 952.0
margin_top = 312.0
margin_right = -3296.0
margin_bottom = -1551.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ2M1" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 712.0
margin_top = 512.0
margin_right = -3536.0
margin_bottom = -1351.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ2M2" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 832.0
margin_top = 512.0
margin_right = -3416.0
margin_bottom = -1351.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ2M3" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 952.0
margin_top = 512.0
margin_right = -3296.0
margin_bottom = -1351.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ3M1" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 712.0
margin_top = 712.0
margin_right = -3536.0
margin_bottom = -1151.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ3M2" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 832.0
margin_top = 712.0
margin_right = -3416.0
margin_bottom = -1151.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ3M3" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 952.0
margin_top = 712.0
margin_right = -3296.0
margin_bottom = -1151.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ4M1" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 712.0
margin_top = 912.0
margin_right = -3536.0
margin_bottom = -951.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ4M2" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 832.0
margin_top = 912.0
margin_right = -3416.0
margin_bottom = -951.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ4M3" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 952.0
margin_top = 912.0
margin_right = -3296.0
margin_bottom = -951.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ5M1" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 712.0
margin_top = 1112.0
margin_right = -3536.0
margin_bottom = -751.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ5M2" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 832.0
margin_top = 1112.0
margin_right = -3416.0
margin_bottom = -751.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ5M3" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 952.0
margin_top = 1112.0
margin_right = -3296.0
margin_bottom = -751.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ6M1" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 712.0
margin_top = 1312.0
margin_right = -3536.0
margin_bottom = -551.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ6M2" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 832.0
margin_top = 1312.0
margin_right = -3416.0
margin_bottom = -551.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ6M3" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 952.0
margin_top = 1312.0
margin_right = -3296.0
margin_bottom = -551.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ7M1" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 712.0
margin_top = 1512.0
margin_right = -3536.0
margin_bottom = -351.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ7M2" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 832.0
margin_top = 1512.0
margin_right = -3416.0
margin_bottom = -351.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ7M3" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 952.0
margin_top = 1512.0
margin_right = -3296.0
margin_bottom = -351.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ8M1" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 712.0
margin_top = 1712.0
margin_right = -3536.0
margin_bottom = -151.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ8M2" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 832.0
margin_top = 1712.0
margin_right = -3416.0
margin_bottom = -151.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQ8M3" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 952.0
margin_top = 1712.0
margin_right = -3296.0
margin_bottom = -151.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerS1" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1376.0
margin_top = 512.0
margin_right = -2448.0
margin_bottom = -1351.0
custom_fonts/font = SubResource( 2 )
text = "BRAINAN"

[node name="PlayerS2" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1376.0
margin_top = 712.0
margin_right = -2448.0
margin_bottom = -1151.0
custom_fonts/font = SubResource( 2 )
text = "BRAINAN"

[node name="PlayerS3" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1376.0
margin_top = 1312.0
margin_right = -2448.0
margin_bottom = -551.0
custom_fonts/font = SubResource( 2 )
text = "BRAINAN"

[node name="PlayerS4" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1376.0
margin_top = 1512.0
margin_right = -2448.0
margin_bottom = -351.0
custom_fonts/font = SubResource( 2 )
text = "BRAINAN"

[node name="ScoreS1M1" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1936.0
margin_top = 512.0
margin_right = -2312.0
margin_bottom = -1351.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreS1M2" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2056.0
margin_top = 512.0
margin_right = -2192.0
margin_bottom = -1351.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreS1M3" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2176.0
margin_top = 512.0
margin_right = -2072.0
margin_bottom = -1351.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreS2M1" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1936.0
margin_top = 712.0
margin_right = -2312.0
margin_bottom = -1151.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreS2M2" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2056.0
margin_top = 712.0
margin_right = -2192.0
margin_bottom = -1151.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreS2M3" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2176.0
margin_top = 712.0
margin_right = -2072.0
margin_bottom = -1151.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreS3M1" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1936.0
margin_top = 1312.0
margin_right = -2312.0
margin_bottom = -551.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreS3M2" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2056.0
margin_top = 1312.0
margin_right = -2192.0
margin_bottom = -551.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreS3M3" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2176.0
margin_top = 1312.0
margin_right = -2072.0
margin_bottom = -551.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreS4M1" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1936.0
margin_top = 1512.0
margin_right = -2312.0
margin_bottom = -351.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreS4M2" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2056.0
margin_top = 1512.0
margin_right = -2192.0
margin_bottom = -351.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreS4M3" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2176.0
margin_top = 1512.0
margin_right = -2072.0
margin_bottom = -351.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerF1" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2592.0
margin_top = 912.0
margin_right = -1232.0
margin_bottom = -951.0
custom_fonts/font = SubResource( 2 )
text = "BRAINAN"

[node name="PlayerF2" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2592.0
margin_top = 1112.0
margin_right = -1232.0
margin_bottom = -751.0
custom_fonts/font = SubResource( 2 )
text = "BRAINAN"

[node name="ScoreF1M1" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3152.0
margin_top = 912.0
margin_right = -1096.0
margin_bottom = -951.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreF1M2" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3272.0
margin_top = 912.0
margin_right = -976.0
margin_bottom = -951.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreF1M3" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3392.0
margin_top = 912.0
margin_right = -856.0
margin_bottom = -951.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreF1M4" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3512.0
margin_top = 912.0
margin_right = -736.0
margin_bottom = -951.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreF1M5" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3632.0
margin_top = 912.0
margin_right = -616.0
margin_bottom = -951.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreF2M1" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3152.0
margin_top = 1112.0
margin_right = -1096.0
margin_bottom = -751.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreF2M2" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3272.0
margin_top = 1112.0
margin_right = -976.0
margin_bottom = -751.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreF2M3" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3392.0
margin_top = 1112.0
margin_right = -856.0
margin_bottom = -751.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreF2M4" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3512.0
margin_top = 1112.0
margin_right = -736.0
margin_bottom = -751.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreF2M5" type="Label" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3632.0
margin_top = 1112.0
margin_right = -616.0
margin_bottom = -751.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegionalCup" type="TextureRect" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3760.0
margin_top = 808.0
margin_right = -48.0
margin_bottom = -600.0
texture = ExtResource( 6 )
expand = true

[node name="NationalCup" type="TextureRect" parent="Data"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3760.0
margin_top = 808.0
margin_right = -48.0
margin_bottom = -600.0
texture = ExtResource( 5 )
expand = true

[node name="WorldCup" type="TextureRect" parent="Data"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3760.0
margin_top = 808.0
margin_right = -48.0
margin_bottom = -600.0
texture = ExtResource( 4 )
expand = true

[node name="TheChampionIs" type="Label" parent="Data"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3776.0
margin_top = 544.0
margin_right = -48.0
margin_bottom = -1079.0
custom_fonts/font = SubResource( 2 )
text = "THE

CHAMPION

IS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Champion" type="Label" parent="Data"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3776.0
margin_top = 1216.0
margin_right = -48.0
margin_bottom = -647.0
custom_fonts/font = SubResource( 2 )
text = "BRAINAN"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayMatch" type="Button" parent="Data"]
anchor_left = 0.25
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1729.0
margin_right = -2160.0
margin_bottom = -120.0
theme = ExtResource( 8 )
custom_fonts/font = SubResource( 3 )
text = "PLAY NEXT MATCH"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
